Triangulo por JP

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /ejercicio_clase/build/
 /facturar_productos1/nbproject/private/
 /facturar_productos1/build/
+/clasificacion_Triangulo2/nbproject/private/
+/clasificacion_Triangulo2/build/
