Costo de envío por JP

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /facturar_productos1/build/
 /clasificacion_Triangulo2/nbproject/private/
 /clasificacion_Triangulo2/build/
+/costo_Paquetes3/nbproject/private/
+/costo_Paquetes3/build/
