--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /clasificacion_Triangulo2/build/
 /costo_Paquetes3/nbproject/private/
 /costo_Paquetes3/build/
+/monto_Factura/nbproject/private/
+/mes_Nombre/nbproject/private/
+/mes_Nombre/build/
+/operacion_Matematica5/nbproject/private/
+/operacion_Matematica5/build/
